--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -19,7 +19,7 @@ $font_pre: "Courier 10 Pitch", Courier, monospace;
 $portrait:480px;
 $xswidth: 600px;
 $tabwidth: 820px;
-$midwidth: 960px;
+$midwidth: 1100px;
 $deskwidth: 1200px;
 $xxl: 1380px;
 $nav_width: 350px;
